feat: implement admin panel features and refactor backend services
- Added server-side pagination and search for admin dashboard
- Implemented robust image upload functionality across entities
- Refactored ingredient, product, and category CRUD operations
- Standardized API calls in the frontend
- Updated Docker configurations and environment templates